--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "version": "yarn clean && yarn build"
   },
   "peerDependencies": {
-    "expo-constants": "^9.1.0",
-    "expo-device": "^2.2.0",
-    "expo-localization": "^8.2.0",
-    "react-native": "^0.63.0"
+    "expo-application": "^5.0.0",
+    "expo-device": "^5.0.0",
+    "expo-localization": "^14.0.0",
+    "react-native": "^0.72.0"
   },
   "dependencies": {},
   "devDependencies": {
@@ -41,13 +41,13 @@
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
-    "@types/react-native": "^0.63.23",
+    "@types/react-native": "^0.72.2",
     "cross-env": "^7.0.2",
-    "expo-constants": "^9.2.0",
-    "expo-device": "^2.3.0",
-    "expo-localization": "^9.0.0",
-    "react-native": "^0.63.3",
+    "expo-application": "^5.3.0",
+    "expo-device": "^5.4.0",
+    "expo-localization": "^14.3.0",
+    "react-native": "^0.72.4",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.3"
+    "typescript": "^5.2.2"
   }
 }
